--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple Page</title>
+    <meta http-equiv="refresh" content="0; url=m1.html">
+    <title>Redirecting...</title>
 </head>
 <body>
-    <h1>Hello, World! 222</h1>
-    <p>This is a simple HTML page.</p>
+    <p>Redirecting you to the next page...</p>
 </body>
 </html>
